# ddcmp

./: .gitignore  README.md
doc/: api.md  ddcmp-pio.txt  design.md  kicad.md  software.md
firmware/: CMakeLists.txt  ddcmp.c  ddcmp.pio  ddcmp.uf2  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c
kicad/ddcmp/: cpu.sch  ddcmp-cache.lib  ddcmp.kicad_pcb  ddcmp.pro  ddcmp.sch  ddcmp_symbols.dcm  ddcmp_symbols.lib  fp-lib-table  im.sch  rs232.sch  sym-lib-table
kicad/ddcmp/ddcmp_parts/: 731000105.step  75869_y07_asm.step  Amphenol_DB25F_PCB.kicad_mod  Amphenol_DB25M_PCB.kicad_mod  BERG_blue_40pin.step  BNC_Molex_J_RA_PCB.kicad_mod  Berg_40_pin_DEC_pinout.kicad_mod  CD542.step  CD637.step  C_Rect_L4.0mm_W2.5mm_P2.54mm.kicad_mod  DIP-14_W7.62mm.kicad_mod  DIP-18_W7.62mm.kicad_mod  LED_D3.0mm.kicad_mod  LED_D3.0mm_green.step  LED_D3.0mm_red.step  LED_D3.0mm_yellow.step  Mini-Circuits_CD637_H5.23mm.kicad_mod  Mini-Circuits_CD637_X65.kicad_mod  Pin_Header_Straight_1x02_Pitch2.54mm.kicad_mod  Pin_Header_Straight_1x06_Pitch2.54mm.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  RPi_Pico_SMD_TH_labeled.kicad_mod  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal.kicad_mod  Raspberry_Pico.step  SOIC-8_3.9x4.9mm_Pitch1.27mm.kicad_mod  X65.step  kemet_cap.step
